<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

	<ImageView
	    android:id="@+id/imageView_Logo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textView_Nombre_Desafio"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentStart="true"
	    android:layout_marginLeft="22dp"
	    android:layout_marginStart="22dp"
	    android:adjustViewBounds="true"
	    android:contentDescription="@string/logo_description"
	    android:src="@drawable/ic_usain_bolt" />
       
	<TextView
	    android:id="@+id/textView_Nombre_Desafio"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="15dp"
	    android:layout_toEndOf="@+id/textView_Duration"
	    android:layout_toRightOf="@+id/textView_Duration"
	    android:text="@string/challenge"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="#008a00"
	    android:textSize="34sp"
	    android:textStyle="bold" />

       <TextView
        android:id="@+id/textView_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView_Logo"
        android:layout_alignLeft="@+id/imageView_Logo"
        android:layout_below="@+id/imageView_Logo"
        android:layout_marginTop="14dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/textView_Description_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Description"
        android:layout_alignLeft="@+id/textView_Description"
        android:layout_below="@+id/textView_Description"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/description_usain_bolt"
        android:textSize="18sp" />

	<TextView
		android:id="@+id/textView_Start_Time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignStart="@+id/textView_Description_Value"
		android:layout_alignLeft="@+id/textView_Description_Value"
		android:layout_below="@+id/textView_Description_Value"
		android:layout_marginTop="19dp"
		android:text="@string/start_time"
		android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView_Duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Start_Time"
        android:layout_alignLeft="@+id/textView_Start_Time"
        android:layout_below="@+id/textView_Start_Time"
        android:layout_marginTop="23dp"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <TextView
        android:id="@+id/textView_Duration_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_To_Beat"
        android:layout_alignStart="@+id/textView_Start_Time_Value"
        android:layout_alignLeft="@+id/textView_Start_Time_Value"
        android:text="@string/duration_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4C4C4C"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_To_Beat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Duration"
        android:layout_alignLeft="@+id/textView_Duration"
        android:layout_below="@+id/textView_Duration"
        android:layout_marginTop="24dp"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
	    android:id="@+id/verde"
	    android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="20dp" >

		<View
	   	    android:id="@+id/caja_verde"
	   	    android:layout_width="250dp"
	   	    android:layout_height="40dp"
	   	    android:layout_centerHorizontal="true"
	   	    android:layout_below="@+id/textView_To_Beat"
	   	    android:layout_marginTop="25dp"
	   	    android:background="#008a00"></View>
	   	
		<TextView
		    android:id="@+id/textView_Time_Left"
	   	    android:gravity="center"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/caja_verde"
		    android:layout_marginBottom="13dp"
		    android:layout_alignEnd="@+id/textView_Start_Time"
		    android:layout_alignRight="@+id/textView_Start_Time"
		    android:layout_marginEnd="16dp"
		    android:layout_marginRight="16dp"
		    android:text="@string/time_left"
		    android:textColor="#FFFFFF"
		    android:textStyle="bold"
		    android:textSize="14sp" />
	
		<TextView
		    android:id="@+id/textView_Time_Left_Value"
	   	    android:gravity="center"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/caja_verde"
		    android:layout_marginBottom="13dp"
		    android:layout_toEndOf="@+id/textView_Time_Left"
		    android:layout_toRightOf="@+id/textView_Time_Left"
		    android:text="@string/time_left_value"
		    android:textColor="#FFFFFF"
		    android:textStyle="bold"
		    android:textSize="14sp" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/roja"
	    android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="20dp" >
	    <View
	   	    android:id="@+id/caja_roja"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="40dp"
	   	    android:layout_marginTop="20dp"
	   	    android:background="#D40C34"></View>
		<TextView
		    android:id="@+id/textView_Speed"
	   	    android:gravity="center"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/caja_roja"
		    android:layout_marginBottom="13dp"
		    android:layout_alignEnd="@+id/textView_Time_Left"
		    android:layout_alignRight="@+id/textView_Time_Left"
		    android:text="@string/speed"
		    android:textColor="#FFFFFF"
		    android:textStyle="bold"
		    android:textSize="14sp" />
		
		<TextView
		    android:id="@+id/textView_Speed_Value"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/caja_roja"
		    android:layout_marginBottom="13dp"
		    android:layout_alignStart="@+id/textView_Time_Left_Value"
		    android:layout_alignLeft="@+id/textView_Time_Left_Value"
		    android:text="@string/speed_value"
		    android:textColor="#FFFFFF"
		    android:textStyle="bold"
		    android:textSize="14sp" />
	</LinearLayout>
	
	<TextView
	    android:id="@+id/textView_To_Beat_Value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView_Duration_Value"
	    android:layout_alignStart="@+id/textView_Duration_Value"
	    android:layout_alignTop="@+id/textView_To_Beat"
	    android:text="@string/points_value"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#4C4C4C"
	    android:textSize="14sp" />

	<TextView
	    android:id="@+id/textView_Start_Time_Value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/textView_Duration"
	    android:layout_alignStart="@+id/textView_Time_Left_Value"
	    android:layout_alignLeft="@+id/textView_Time_Left_Value"
	    android:layout_marginStart="15dp"
	    android:layout_marginLeft="15dp"
	    android:text="@string/start_time_value"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#4C4C4C"
	    android:textSize="14sp" />

</RelativeLayout>